css/teams.css
body {
    /*background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/background2.png"); */
    background-color: rgb(3, 130, 77);
}

.navbar {
    background-color: rgb(10, 10, 10) !important; 
}

.navbar .navbar-collapse {
  text-align: center;
}

.navbar-brand {
    padding-right: 20px;
}

a.nav-link {
    font-family: 'Oswald', sans-serif;
    font-size: 27px;
    color: rgb(15, 129, 135) !important;
    padding-left: 25px !important;
    padding-right: 25px !important;
}

a.nav-link:hover {
    color: snow !important;
    transition: 0.6s;
}

a.nav-slogan {
    pointer-events: none;
    font-size: 30px;
    font-family: 'Shrikhand', cursive;
    color: rgb(15, 129, 135) !important;
}


.team {
    margin-top: 50px;
    width: 90%;
    margin: auto;
    margin-top: 30px;
    padding-bottom: 6.25em;
}


img.banner {
    padding-top: 50px;;
    width: 100%;
    height: 100%;
    padding-bottom: 15px;
}

.team h1 {
    font-family: 'Oswald', sans-serif;
    color: white;
    text-align: center;
}

.grid-container {
    width: 100%;
  display: grid;
  grid-template-areas:  
    'player player player player player ';
    'player player player player player';
} 

.player {
    width: 75%;
    margin: auto;
    margin-top: 15px;
    background-color: black;
    grid-area: "player";
    text-align: center;
}

.player.empty {
    background-color: rgb(3, 130, 77);
}

.player img {
    width: 100%;
    height: 200px;
    min-height: 175px;
}

.player p {
    width: 100%;
    height: 50px;
    color: white;
    color: rgb(15, 129, 135);
    font-family: 'Oswald', sans-serif;
    font-size: 22px;
    padding-top: 13px;
}


@media only screen and (max-width: 992px) {
    a.nav-slogan {
        display: none;
    }
}


.footer {
    margin-top: 100px;
    height: 100px;
    background-color: rgb(10, 10, 10);
}

.fa {
margin-top: 20px;
  margin-left: 15px;
  padding: 20px;
  font-size: 200px;
  width: 55px;
  text-align: center;
  text-decoration: none;
}

.fa-facebook {
  background: #3B5998;
  color: white;
}

.fa-twitter {
  background: #55ACEE;
  color: white;
}

.fa-youtube {
  background: red;
  color: white;
}

.fa-instagram {
  background: dodgerblue;
    color: white;
}


@media (max-width: 650px) {
  .grid-container  {
    grid-template-areas: 
        'player'
        'player'
        'player'
        'player'
        'player'
        'player'
        'player'
        'player';
    }
}

